--- a/projeto/erp/financeiro.html
+++ b/projeto/erp/financeiro.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="../js/conexao.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/financeiro.css">
+    <link rel="stylesheet" href="css/financeiro.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
 </head>
@@ -112,7 +112,7 @@
         </div>
     </div>
 
-    <script src="../js/navbar.js"></script>
-    <script src="../js/financeiro.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/financeiro.js"></script>
 </body>
 </html>
