--- a/projeto/erp/financeiro.html
+++ b/projeto/erp/financeiro.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financeiro - ERP ABP</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="../js/conexao.js"></script>
+    <script src="js/conexao.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="../css/financeiro.css">
+    <link rel="stylesheet" href="css/financeiro.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
 </head>
@@ -82,7 +82,7 @@
                     <input type="text" id="filtro_busca" placeholder="Digite para buscar...">
                 </div>
                 <div style="display: flex; align-items: flex-end; gap: 10px;">
-                    <button class="btn-add" onclick="loadFinanceiro()" style="margin:0; flex:1;">
+                    <button class="btn-add" id="btn-filtrar" style="margin:0; flex:1;">
                         <i class="fas fa-search"></i> Filtrar
                     </button>
                     <button onclick="exportarPDF()" style="background:#e74c3c; color:white; border:none; padding:10px; border-radius:6px; cursor:pointer;">
@@ -112,12 +112,12 @@
                     </tr>
                 </thead>
                 <tbody id="financeiro-list">
-                    </tbody>
+                </tbody>
             </table>
         </div>
     </div>
 
-    <script src="../js/navbar.js"></script>
-    <script src="../js/financeiro.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/financeiro.js"></script>
 </body>
 </html>
