--- a/projeto/erp/financeiro.html
+++ b/projeto/erp/financeiro.html
@@ -82,7 +82,7 @@
                     <input type="text" id="filtro_busca" placeholder="Digite para buscar...">
                 </div>
                 <div style="display: flex; align-items: flex-end; gap: 10px;">
-                    <button class="btn-add" id="btn-filtrar" style="margin:0; flex:1;">
+                    <button class="btn-add" onclick="loadFinanceiro()" style="margin:0; flex:1;">
                         <i class="fas fa-search"></i> Filtrar
                     </button>
                     <button onclick="exportarPDF()" style="background:#e74c3c; color:white; border:none; padding:10px; border-radius:6px; cursor:pointer;">
@@ -92,17 +92,10 @@
             </div>
         </div>
 
-        <div id="bulk-actions" style="display:none; margin-bottom: 15px;">
-            <button onclick="deleteSelected()" style="background:#ef4444; color:white; border:none; padding:12px; border-radius:6px; cursor:pointer; font-weight:bold;">
-                <i class="fas fa-trash"></i> Excluir Selecionados (<span id="selected-count">0</span>)
-            </button>
-        </div>
-
         <div class="table-container">
             <table>
                 <thead>
                     <tr>
-                        <th style="width: 40px;"><input type="checkbox" id="select-all" onclick="toggleSelectAll()"></th>
                         <th>Vencimento</th>
                         <th>Descrição</th>
                         <th>Entidade</th>
@@ -112,7 +105,7 @@
                     </tr>
                 </thead>
                 <tbody id="financeiro-list">
-                </tbody>
+                    </tbody>
             </table>
         </div>
     </div>
