--- a/projeto/erp/financeiro.html
+++ b/projeto/erp/financeiro.html
@@ -1,50 +1,116 @@
-<div class="card filters-area">
-    <div class="form-grid">
-        <div>
-            <label>Início</label>
-            <input type="date" id="data_inicio">
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Financeiro - ERP ABP</title>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="js/conexao.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="css/financeiro.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div class="dashboard-cards">
+            <div class="card-fin total-receber">
+                <h4>A Receber</h4>
+                <span id="resumo-receber">R$ 0,00</span>
+            </div>
+            <div class="card-fin total-pagar">
+                <h4>A Pagar</h4>
+                <span id="resumo-pagar">R$ 0,00</span>
+            </div>
+            <div class="card-fin saldo-atual">
+                <h4>Saldo do Período</h4>
+                <span id="resumo-saldo">R$ 0,00</span>
+            </div>
         </div>
-        <div>
-            <label>Fim</label>
-            <input type="date" id="data_fim">
+
+        <div class="card">
+            <h3>Novo Lançamento Financeiro</h3>
+            <div class="form-grid">
+                <div>
+                    <label>Tipo</label>
+                    <select id="tipo" onchange="toggleEntidade()">
+                        <option value="receber">Receita (Entrada)</option>
+                        <option value="pagar">Despesa (Saída)</option>
+                    </select>
+                </div>
+                <div id="campo-cliente">
+                    <label>Cliente</label>
+                    <select id="cliente_id"><option value="">Selecione...</option></select>
+                </div>
+                <div id="campo-fornecedor" style="display:none;">
+                    <label>Fornecedor</label>
+                    <select id="fornecedor_id"><option value="">Selecione...</option></select>
+                </div>
+                <div style="grid-column: span 2;">
+                    <label>Descrição</label>
+                    <input type="text" id="descricao" placeholder="Ex: Aluguel mensal">
+                </div>
+                <div>
+                    <label>Valor (R$)</label>
+                    <input type="number" id="valor" step="0.01">
+                </div>
+                <div>
+                    <label>Vencimento</label>
+                    <input type="date" id="data_vencimento">
+                </div>
+                <div>
+                    <label>Repetir (Meses)</label>
+                    <input type="number" id="parcelas" value="1" min="1">
+                </div>
+            </div>
+            <button class="btn-add" onclick="salvarLancamento()">Lançar no Caixa</button>
         </div>
-        <div>
-            <label>Busca (Descrição/Entidade)</label>
-            <input type="text" id="busca_termo" placeholder="Digite para filtrar...">
+
+        <div class="card">
+            <h3>Busca e Relatórios</h3>
+            <div class="form-grid">
+                <div>
+                    <label>Data Início</label>
+                    <input type="date" id="filtro_inicio">
+                </div>
+                <div>
+                    <label>Data Fim</label>
+                    <input type="date" id="filtro_fim">
+                </div>
+                <div>
+                    <label>Descrição / Nome</label>
+                    <input type="text" id="filtro_busca" placeholder="Digite para buscar...">
+                </div>
+                <div style="display: flex; align-items: flex-end; gap: 10px;">
+                    <button class="btn-add" onclick="loadFinanceiro()" style="margin:0; flex:1;">
+                        <i class="fas fa-search"></i> Filtrar
+                    </button>
+                    <button onclick="exportarPDF()" style="background:#e74c3c; color:white; border:none; padding:10px; border-radius:6px; cursor:pointer;">
+                        <i class="fas fa-file-pdf"></i> PDF
+                    </button>
+                </div>
+            </div>
         </div>
-        <div style="display: flex; align-items: flex-end; gap: 10px;">
-            <button class="btn-add" onclick="loadFinanceiro()" style="margin:0; width: auto; padding: 10px 20px;">
-                <i class="fas fa-search"></i> Buscar
-            </button>
-            <button class="btn-cancel" onclick="exportarPDF()" style="display:block; margin:0; width: auto; background: #e74c3c;">
-                <i class="fas fa-file-pdf"></i> PDF
-            </button>
+
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Vencimento</th>
+                        <th>Descrição</th>
+                        <th>Entidade</th>
+                        <th>Valor</th>
+                        <th>Status</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="financeiro-list">
+                    </tbody>
+            </table>
         </div>
     </div>
-</div>
 
-<div id="bulk-actions" style="display:none; margin-bottom: 10px;">
-    <button class="btn-del" onclick="deleteSelected()" style="background: #ef4444; color: white; padding: 8px 15px; border-radius: 5px;">
-        Excluir Selecionados (<span id="selected-count">0</span>)
-    </button>
-</div>
-
-<div class="table-container">
-    <table id="tabela-financeiro">
-        <thead>
-            <tr>
-                <th><input type="checkbox" id="select-all" onclick="toggleSelectAll()"></th>
-                <th>Vencimento</th>
-                <th>Descrição</th>
-                <th>Entidade</th>
-                <th>Valor</th>
-                <th>Status</th>
-                <th>Ações</th>
-            </tr>
-        </thead>
-        <tbody id="financeiro-list"></tbody>
-    </table>
-</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="js/financeiro.js"></script>
+</body>
+</html>
