--- a/projeto/erp/bloco_de_notas.html
+++ b/projeto/erp/bloco_de_notas.html
@@ -8,14 +8,157 @@
     <title>Bloco de Notas - ERP ABP</title>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<!-- CONEXAO -->
+    <script>
+// Configurações do Supabase
+const SUPABASE_URL = 'https://kjhjeaiwjilkgocwvbwi.supabase.co';
+const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
 
-    <script src="js/conexao.js"></script>
+// Inicializa o cliente globalmente
+const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+/**
+ * Bloqueia o acesso se não estiver logado
+ */
+async function validarAcesso() {
+    const { data: { session } } = await _supabase.auth.getSession();
+
+    if (!session) {
+        // Verifica se a página está na raiz ou em subpasta para ajustar o caminho do login
+        const pathPrefix = window.location.pathname.includes('/pages/') ? '../' : '';
+        window.location.href = pathPrefix + 'login.html';
+    }
+    return session;
+}
+
+// Executa automaticamente ao carregar o script
+validarAcesso();
+
+   </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <link rel="stylesheet" href="css/bloco_de_notas.css">
+    <style>
+/* Variáveis globais */
+:root {
+    --primary: #3ecf8e;
+    --dark: #0f172a;
+}
+
+/* Reset básico */
+* {
+    box-sizing: border-box;
+}
+
+/* Estilo base da página */
+body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: #f1f5f9;
+    padding-top: 90px;
+}
+
+/* Container do bloco de notas */
+.container {
+    max-width: 700px;
+    margin: auto;
+    background: white;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+}
+
+/* Inputs e textarea */
+textarea,
+input {
+    width: 100%;
+    margin-bottom: 15px;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    font-size: 16px;
+}
+
+/* Botão de salvar/atualizar */
+.btn-save {
+    background: var(--primary);
+    color: white;
+    padding: 15px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    font-weight: bold;
+    border-radius: 8px;
+    font-size: 16px;
+    transition: 0.3s;
+}
+
+.btn-save:hover {
+    filter: brightness(1.1);
+}
+
+/* Nota individual */
+.note {
+    border-bottom: 1px solid #f1f1f1;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+/* Conteúdo da nota */
+.note-content strong {
+    color: #1e293b;
+    font-size: 1.1em;
+    display: block;
+    margin-bottom: 5px;
+}
+
+.note-content p {
+    color: #64748b;
+    margin: 0;
+    line-height: 1.5;
+    white-space: pre-wrap;
+}
+
+/* Ações da nota */
+.actions {
+    display: flex;
+    gap: 8px;
+}
+
+.actions button {
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-size: 14px;
+}
+
+/* Área de busca e exportação */
+.search-box {
+    margin-top: 30px;
+    border-top: 1px solid #eee;
+    padding-top: 20px;
+}
+
+/* Botão de exportação */
+.export-btn {
+    width: 100%;
+    background: #2c3e50;
+    color: white;
+    border: none;
+    padding: 12px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-weight: bold;
+}
+    </style>
 </head>
 <body>
 
@@ -53,7 +196,168 @@
 
     <script src="js/navbar.js"></script>
 
-    <script src="js/bloco_de_notas.js"></script>
+    <script>
+/**
+ * js/bloco_de_notas.js
+ * Depende de: js/conexao.js (que fornece a variável _supabase)
+ */
+
+// Armazena todas as notas carregadas localmente para busca rápida
+let allNotes = [];
+
+/**
+ * Carrega as notas do banco (Iniciado automaticamente ao carregar a página)
+ */
+async function loadNotes() {
+    // Busca todas as notas ordenadas pela data de criação
+    const { data: notes, error } = await _supabase
+        .from('notes')
+        .select('*')
+        .order('created_at', { ascending: false });
+
+    if (error) {
+        console.error("Erro ao carregar notas:", error.message);
+        return;
+    }
+
+    allNotes = notes || [];
+    renderNotes(allNotes);
+}
+
+/**
+ * Renderiza as notas na tela (HTML dinâmico)
+ */
+function renderNotes(notes) {
+    document.getElementById('notes-list').innerHTML =
+        notes.map(n => `
+            <div class="note">
+                <div class="note-content">
+                    <strong>${n.title}</strong>
+                    <p>${n.content}</p>
+                </div>
+                <div class="actions">
+                    <button style="background:#f1c40f"
+                        onclick="prepareEdit('${n.id}', \`${n.title}\`, \`${n.content}\`)">
+                        <i class="fas fa-edit"></i>
+                    </button>
+
+                    <button style="background:#e74c3c"
+                        onclick="deleteNote('${n.id}')">
+                        <i class="fas fa-trash"></i>
+                    </button>
+                </div>
+            </div>
+        `).join('') ||
+        '<p style="text-align:center;color:#94a3b8;margin-top:20px;">Nenhuma nota encontrada.</p>';
+}
+
+/**
+ * Salva ou atualiza uma nota (CRUD - Create/Update)
+ */
+async function saveNote() {
+    const id = document.getElementById('note-id').value;
+    const title = document.getElementById('title').value;
+    const content = document.getElementById('content').value;
+
+    if (!title || !content) {
+        return alert("Preencha título e conteúdo!");
+    }
+
+    // Obtém o usuário logado através da conexão ativa
+    const { data: { user } } = await _supabase.auth.getUser();
+
+    if (id) {
+        // Modo Edição (Update)
+        await _supabase.from('notes')
+            .update({ title, content })
+            .eq('id', id);
+    } else {
+        // Modo Novo (Insert)
+        await _supabase.from('notes')
+            .insert([{ title, content, user_id: user.id }]);
+    }
+
+    resetForm();
+    loadNotes();
+}
+
+/**
+ * Prepara o formulário para edição (Preenche os campos)
+ */
+function prepareEdit(id, title, content) {
+    document.getElementById('note-id').value = id;
+    document.getElementById('title').value = title;
+    document.getElementById('content').value = content;
+    document.getElementById('btn-save').innerText = "Atualizar Nota";
+
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+}
+
+/**
+ * Reseta o formulário para o estado original
+ */
+function resetForm() {
+    document.getElementById('note-id').value = '';
+    document.getElementById('title').value = '';
+    document.getElementById('content').value = '';
+    document.getElementById('btn-save').innerText = "Salvar Nota";
+}
+
+/**
+ * Exclui uma nota do banco (CRUD - Delete)
+ */
+async function deleteNote(id) {
+    if (confirm("Deseja excluir esta nota?")) {
+        await _supabase.from('notes').delete().eq('id', id);
+        loadNotes();
+    }
+}
+
+/**
+ * Filtra as notas carregadas pelo texto digitado na pesquisa
+ */
+function filterNotes() {
+    const q = document.getElementById('search').value.toLowerCase();
+
+    const filtered = allNotes.filter(n =>
+        n.title.toLowerCase().includes(q) ||
+        n.content.toLowerCase().includes(q)
+    );
+
+    renderNotes(filtered);
+}
+
+/**
+ * Exporta todas as notas presentes na lista para um arquivo PDF
+ */
+async function exportAllToPDF() {
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+
+    doc.text("Meu Bloco de Notas - ERP ABP", 10, 10);
+
+    let y = 20;
+
+    allNotes.forEach((n, i) => {
+        doc.setFont(undefined, 'bold');
+        doc.text(`${i + 1}. ${n.title}`, 10, y);
+        doc.setFont(undefined, 'normal');
+        doc.text(n.content, 10, y + 7);
+        y += 25;
+    });
+
+    doc.save("minhas-notas.pdf");
+}
+
+/**
+ * Inicializa os dados assim que o documento estiver pronto
+ * A trava de segurança já foi executada no conexao.js
+ */
+document.addEventListener('DOMContentLoaded', loadNotes);
+
+
+
+</script>
 
 </body>
 </html>
