--- a/projeto/erp/login.html
+++ b/projeto/erp/login.html
@@ -14,7 +14,128 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <!-- CSS específico da tela de login -->
-    <link rel="stylesheet" href="css/login.css">
+    <style>
+    /* Variáveis globais de cores */
+:root {
+    --primary: #3ecf8e;
+    --dark: #1e293b;
+    --bg: #0f172a;
+}
+
+/* Estilo base da página */
+body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: var(--bg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
+/* Card central de login */
+.login-card {
+    background: white;
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    width: 100%;
+    max-width: 400px;
+    text-align: center;
+}
+
+/* Título principal */
+h1 {
+    color: var(--dark);
+    margin-bottom: 5px;
+    font-size: 24px;
+}
+
+/* Subtítulo */
+h2 {
+    color: #64748b;
+    margin-bottom: 25px;
+    font-size: 16px;
+    font-weight: normal;
+}
+
+/* Container dos inputs */
+.input-container {
+    position: relative;
+    margin-bottom: 15px;
+}
+
+/* Campos de entrada */
+input {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+/* Botão para mostrar/ocultar senha */
+.toggle-password {
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 18px;
+    color: #666;
+}
+
+/* Botão principal */
+button.main-btn {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 6px;
+    background-color: var(--primary);
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+/* Hover do botão */
+button.main-btn:hover {
+    background-color: #34b27b;
+}
+
+/* Links extras */
+.extra-links {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 14px;
+}
+
+/* Estilo dos links */
+.link {
+    color: #4a90e2;
+    text-decoration: none;
+    cursor: pointer;
+    font-weight: 500;
+}
+
+/* Botão de voltar */
+.btn-back {
+    background: #e2e8f0;
+    color: #475569;
+    padding: 8px 12px;
+    border-radius: 6px;
+    border: none;
+    margin-bottom: 20px;
+    cursor: pointer;
+    display: none;
+}
+    </style>
 </head>
 <body>
 
@@ -67,7 +188,91 @@
     
     
     <!-- Script principal do login -->
-    <script src="js/login.js"></script>
+    <script>
+
+const SUPABASE_URL = 'SUA_URL_AQUI';
+const SUPABASE_KEY = 'SUA_CHAVE_ANON_AQUI';
+
+// Criação do cliente Supabase
+const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+/**
+ * Alterna a visibilidade da senha
+ */
+function toggleVisibility() {
+    const passInput = document.getElementById('password');
+    const toggleBtn = document.querySelector('.toggle-password');
+
+    passInput.type = passInput.type === 'password' ? 'text' : 'password';
+    toggleBtn.innerText = passInput.type === 'password' ? '👁️' : '🙈';
+}
+
+/**
+ * Apenas Login
+ */
+async function handleAuth() {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+
+    const { error } = await _supabase.auth.signInWithPassword({ email, password });
+
+    if (error) alert("Erro: " + error.message);
+    else window.location.href = 'index.html';
+}
+
+/**
+ * Envio de e-mail para recuperação de senha
+ */
+async function forgotPassword() {
+    const email = document.getElementById('email').value;
+    if (!email) return alert("Digite seu e-mail.");
+
+    const { error } = await _supabase.auth.resetPasswordForEmail(email, {
+        redirectTo: window.location.href
+    });
+
+    if (error) alert(error.message);
+    else alert("Link de recuperação enviado!");
+}
+
+/**
+ * Detecta se o usuário chegou por link de recuperação
+ */
+async function checkRecovery() {
+    const hash = window.location.hash;
+
+    if (hash && (hash.includes("type=recovery") || hash.includes("access_token="))) {
+        document.getElementById('form-subtitle').innerText = "🔑 Defina sua nova senha";
+        document.getElementById('email-group').style.display = 'none';
+        document.getElementById('btn-auth').innerText = "Salvar Nova Senha";
+        document.getElementById('btn-auth').onclick = updatePassword;
+        document.getElementById('link-forgot').style.display = 'none';
+    }
+}
+
+/**
+ * Atualiza a senha do usuário
+ */
+async function updatePassword() {
+    const newPassword = document.getElementById('password').value;
+
+    if (newPassword.length < 6) {
+        return alert("Mínimo 6 caracteres.");
+    }
+
+    const { error } = await _supabase.auth.updateUser({ password: newPassword });
+
+    if (error) alert(error.message);
+    else {
+        alert("Senha atualizada!");
+        window.location.hash = "";
+        window.location.reload();
+    }
+}
+
+// Executa verificação de recuperação ao carregar a página
+window.onload = checkRecovery;
+    </script>
 
 </body>
 </html>
