--- a/projeto/erp/login.html
+++ b/projeto/erp/login.html
@@ -190,8 +190,8 @@ button.main-btn:hover {
     <!-- Script principal do login -->
     <script>
 
-const SUPABASE_URL = 'SUA_URL_AQUI';
-const SUPABASE_KEY = 'SUA_CHAVE_ANON_AQUI';
+const SUPABASE_URL = 'https://kjhjeaiwjilkgocwvbwi.supabase.co';
+const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
 
 // Criação do cliente Supabase
 const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
