--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -83,6 +83,66 @@ body {
    </style>
 </head>
 <body>
+<!-- NAVBAR -->
+    /* NAVBAR FIXA */
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: white;
+    padding: 15px 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    z-index: 1000;
+}
+
+.nav-buttons {
+    display: flex;
+    gap: 15px;
+}
+
+.btn-nav {
+    background: #ef4444;
+    color: white;
+    padding: 8px 15px;
+    border-radius: 6px;
+    font-weight: bold;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    transition: 0.3s;
+    text-decoration: none;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.btn-nav:hover {
+    background: #dc2626;
+    transform: scale(1.05);
+}
+  <div class="navbar">
+    <div style="font-weight: bold; color: #0f172a;">ERP ABP</div>
+    <div class="nav-buttons">
+        <button class="btn-nav btn-logout-nav" onclick="sairDaConta()">
+            <i class="fas fa-sign-out-alt"></i> Sair
+        </button>
+    </div>
+</div>  
+    /**
+ * Função para Deslogar
+ */
+async function sairDaConta() {
+    if(confirm("Deseja realmente sair do sistema?")) {
+        await _supabase.auth.signOut();
+        window.location.href = 'login.html';
+    }
+}
+<!-- FIM DA NAVBAR -->
+    
 
     <div class="content">
         <div class="header-area">
