--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -83,7 +83,8 @@ body {
    </style>
 </head>
 <body>
-<!-- NAVBAR -->
+<!-- NAVBAR ################################## -->
+<style>    
     /* NAVBAR FIXA */
 .navbar {
     position: fixed;
@@ -124,6 +125,7 @@ body {
     background: #dc2626;
     transform: scale(1.05);
 }
+</style>  
   <div class="navbar">
     <div style="font-weight: bold; color: #0f172a;">ERP ABP</div>
     <div class="nav-buttons">
@@ -132,6 +134,7 @@ body {
         </button>
     </div>
 </div>  
+<script>
     /**
  * Função para Deslogar
  */
@@ -141,6 +144,7 @@ async function sairDaConta() {
         window.location.href = 'login.html';
     }
 }
+</script>
 <!-- FIM DA NAVBAR -->
     
 
