--- a/projeto/erp/clientes.html
+++ b/projeto/erp/clientes.html
@@ -7,7 +7,362 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <!-- CONEXAO/VERIFICARLOG -->
+    <script><!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Clientes - ERP ABP</title>
+
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+    // Configurações do Supabase
+const SUPABASE_URL = 'https://kjhjeaiwjilkgocwvbwi.supabase.co';
+const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
+
+const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+async function validarAcesso() {
+    const { data: { session } } = await _supabase.auth.getSession();
+    if (!session) {
+        const pathPrefix = window.location.pathname.includes('/pages/') ? '../' : '';
+        window.location.href = pathPrefix + 'login.html';
+    }
+    return session;
+}
+validarAcesso();
+    </script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <style>
+/* Variáveis globais de cores */
+:root {
+    --primary: #3ecf8e;
+    --dark: #0f172a;
+    --bg: #f1f5f9;
+}
+
+* { box-sizing: border-box; }
+
+body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: var(--bg);
+    padding-top: 85px;
+}
+
+.container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 20px;
+}
+
+.card {
+    background: white;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+    margin-bottom: 20px;
+}
+
+.section-title {
+    color: var(--primary);
+    font-size: 14px;
+    text-transform: uppercase;
+    margin: 20px 0 10px;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 5px;
+    font-weight: bold;
+}
+
+.form-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 15px;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 13px;
+    color: #64748b;
+    font-weight: bold;
+}
+
+input, select, textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    font-size: 14px;
+}
+
+input:focus, select:focus, textarea:focus {
+    border-color: var(--primary);
+    outline: none;
+}
+
+.btn-add {
+    background: var(--primary);
+    color: white;
+    padding: 15px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.btn-cancel {
+    background: #64748b;
+    color: white;
+    margin-top: 10px;
+    border: none;
+    padding: 10px;
+    border-radius: 6px;
+    cursor: pointer;
+    display: none;
+    width: 100%;
+}
+
+.table-container {
+    background: white;
+    border-radius: 12px;
+    overflow-x: auto;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+}
+
+table { width: 100%; border-collapse: collapse; min-width: 800px; }
+th { background: #f8fafc; padding: 15px; color: #64748b; font-size: 12px; text-transform: uppercase; }
+td { padding: 15px; border-top: 1px solid #f1f5f9; }
+
+.btn-edit { color: #3b82f6; cursor: pointer; font-size: 18px; background: none; border: none; }
+.btn-del { color: #ef4444; cursor: pointer; font-size: 18px; background: none; border: none; }
+
+/* NAVBAR FIXA */
+.navbar {
+    position: fixed; top: 0; left: 0; width: 100%; background: white;
+    padding: 15px 25px; display: flex; justify-content: space-between;
+    align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); z-index: 1000;
+}
+.btn-nav {
+    background: #ef4444; color: white; padding: 8px 15px; border-radius: 6px;
+    font-weight: bold; font-size: 14px; border: none; cursor: pointer;
+    text-decoration: none; display: inline-flex; align-items: center; gap: 8px;
+}
+    </style>
+</head>
+<body>
+
+<div class="navbar">
+    <div style="font-weight: bold; color: #0f172a;">ERP ABP</div>
+    <div class="nav-buttons">
+        <a href="index.html" style="text-decoration: none; color: #64748b; margin-right: 20px; font-weight: bold;">Voltar</a>
+        <button class="btn-nav" onclick="sairDaConta()"><i class="fas fa-sign-out-alt"></i> Sair</button>
+    </div>
+</div>
+
+    <div class="container">
+        <div class="card">
+            <h3 id="form-title">Novo Cadastro de Usuário / Entidade</h3>
+            <input type="hidden" id="edit-id">
+
+            <div class="section-title">Informações Pessoais e Acesso</div>
+            <div class="form-grid">
+                <div><label>Nome Completo *</label><input type="text" id="nome_completo"></div>
+                <div><label>CPF</label><input type="text" id="cpf"></div>
+                <div><label>Data Nascimento</label><input type="date" id="data_nascimento"></div>
+                <div><label>E-mail</label><input type="email" id="email"></div>
+                <div><label>Telefone</label><input type="text" id="telefone"></div>
+                <div><label>Senha de Acesso</label><input type="password" id="senha_acesso" placeholder="Senha interna"></div>
+                
+                <div>
+                    <label>Nível de Acesso</label>
+                    <select id="acesso">
+                        <option value="cliente">Cliente</option>
+                        <option value="funcionario">Funcionário</option>
+                        <option value="comprador">Comprador</option>
+                        <option value="master">Master</option>
+                    </select>
+                </div>
+                <div>
+                    <label>Relacionamento</label>
+                    <select id="relacionamento">
+                        <option value="cliente">Cliente</option>
+                        <option value="funcionario">Funcionário</option>
+                        <option value="fornecedor">Fornecedor</option>
+                        <option value="terceirizado">Terceirizado</option>
+                        <option value="outros">Outros</option>
+                    </select>
+                </div>
+                <div>
+                    <label>Status</label>
+                    <select id="status">
+                        <option value="ativo">Ativo</option>
+                        <option value="desativado">Desativado</option>
+                    </select>
+                </div>
+                <div><label>Avaliação (0-10)</label><input type="number" id="avaliacao" min="0" max="10" value="5"></div>
+            </div>
+
+            <div class="section-title">Endereço</div>
+            <div class="form-grid">
+                <div><label>CEP</label><input type="text" id="cep" maxlength="8" onblur="buscaCEP()"></div>
+                <div style="grid-column: span 2;"><label>Logradouro</label><input type="text" id="logradouro"></div>
+                <div><label>Número</label><input type="text" id="numero"></div>
+                <div><label>Bairro</label><input type="text" id="bairro"></div>
+                <div><label>Cidade</label><input type="text" id="cidade"></div>
+                <div><label>UF</label><input type="text" id="estado" maxlength="2"></div>
+            </div>
+
+            <div class="section-title">Complementos</div>
+            <div class="form-grid">
+                <div style="grid-column: span 2;"><label>URL de Arquivos (Fotos/Documentos)</label><input type="text" id="arquivos_url" placeholder="Link da foto ou documento"></div>
+                <div style="grid-column: span 2;"><label>Observações</label><textarea id="observacoes" rows="2"></textarea></div>
+            </div>
+
+            <button class="btn-add" id="btn-save" onclick="handleSave()">Salvar Cadastro</button>
+            <button class="btn-cancel" id="btn-cancel" onclick="resetForm()">Cancelar Edição</button>
+        </div>
+
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Nome / Relacionamento</th>
+                        <th>CPF / Contato</th>
+                        <th>Acesso / Status</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="clients-list"></tbody>
+            </table>
+        </div>
+    </div>
+
     <script>
+async function sairDaConta() {
+    if(confirm("Deseja realmente sair?")) {
+        await _supabase.auth.signOut();
+        window.location.href = 'login.html';
+    }
+}
+
+async function buscaCEP() {
+    const cep = document.getElementById('cep').value.replace(/\D/g, '');
+    if (cep.length === 8) {
+        try {
+            const res = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+            const data = await res.json();
+            if (!data.erro) {
+                document.getElementById('logradouro').value = data.logradouro;
+                document.getElementById('bairro').value = data.bairro;
+                document.getElementById('cidade').value = data.localidade;
+                document.getElementById('estado').value = data.uf;
+            }
+        } catch { console.error("Erro CEP"); }
+    }
+}
+
+async function loadClients() {
+    const { data, error } = await _supabase.from('clientes').select('*').order('nome_completo');
+    if (error) return;
+
+    const list = document.getElementById('clients-list');
+    list.innerHTML = (data || []).map(c => `
+        <tr>
+            <td><b>${c.nome_completo}</b><br><small>${c.relacionamento.toUpperCase()}</small></td>
+            <td>${c.cpf || '-'}<br><small>${c.email || ''}</small></td>
+            <td>${c.acesso}<br><small style="color:${c.status === 'ativo' ? 'green' : 'red'}">${c.status}</small></td>
+            <td>
+                <button class="btn-edit" onclick="editFull('${c.id}')"><i class="fas fa-edit"></i></button>
+                <button class="btn-del" onclick="deleteClient('${c.id}')"><i class="fas fa-trash"></i></button>
+            </td>
+        </tr>
+    `).join('') || '<tr><td colspan="4" style="text-align:center">Nenhum registro.</td></tr>';
+}
+
+async function handleSave() {
+    const { data: { user } } = await _supabase.auth.getUser();
+    const id = document.getElementById('edit-id').value;
+
+    const dados = {
+        usuario_id: user.id,
+        nome_completo: document.getElementById('nome_completo').value,
+        cpf: document.getElementById('cpf').value,
+        data_nascimento: document.getElementById('data_nascimento').value || null,
+        email: document.getElementById('email').value,
+        telefone: document.getElementById('telefone').value,
+        senha_acesso: document.getElementById('senha_acesso').value,
+        acesso: document.getElementById('acesso').value,
+        relacionamento: document.getElementById('relacionamento').value,
+        status: document.getElementById('status').value,
+        avaliacao: parseInt(document.getElementById('avaliacao').value),
+        observacoes: document.getElementById('observacoes').value,
+        cep: document.getElementById('cep').value,
+        logradouro: document.getElementById('logradouro').value,
+        numero: document.getElementById('numero').value,
+        bairro: document.getElementById('bairro').value,
+        cidade: document.getElementById('cidade').value,
+        estado: document.getElementById('estado').value,
+        // Converte string para array caso tenha algo escrito, ou envia array vazio
+        arquivos_url: document.getElementById('arquivos_url').value ? [document.getElementById('arquivos_url').value] : []
+    };
+
+    if (!dados.nome_completo) return alert("Nome é obrigatório");
+
+    const { error } = id
+        ? await _supabase.from('clientes').update(dados).eq('id', id)
+        : await _supabase.from('clientes').insert([dados]);
+
+    if (error) alert("Erro: " + error.message);
+    else { resetForm(); loadClients(); }
+}
+
+async function editFull(id) {
+    const { data, error } = await _supabase.from('clientes').select('*').eq('id', id).single();
+    if (error || !data) return;
+
+    Object.keys(data).forEach(k => {
+        const el = document.getElementById(k);
+        if (el) {
+            if (k === 'arquivos_url') el.value = data[k] ? data[k][0] : '';
+            else el.value = data[k] || '';
+        }
+    });
+
+    document.getElementById('edit-id').value = data.id;
+    document.getElementById('form-title').innerText = "Editando Registro";
+    document.getElementById('btn-save').innerText = "Atualizar Cadastro";
+    document.getElementById('btn-cancel').style.display = "block";
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+}
+
+function resetForm() {
+    document.querySelectorAll('input, select, textarea').forEach(i => {
+        if(i.id === 'avaliacao') i.value = '5';
+        else if(i.tagName === 'SELECT') i.selectedIndex = 0;
+        else i.value = '';
+    });
+    document.getElementById('edit-id').value = '';
+    document.getElementById('form-title').innerText = "Novo Cadastro de Usuário / Entidade";
+    document.getElementById('btn-save').innerText = "Salvar Cadastro";
+    document.getElementById('btn-cancel').style.display = "none";
+}
+
+async function deleteClient(id) {
+    if (confirm("Excluir definitivamente?")) {
+        await _supabase.from('clientes').delete().eq('id', id);
+        loadClients();
+    }
+}
+
+document.addEventListener('DOMContentLoaded', loadClients);
+    </script>
+</body>
+</html>
     // Configurações do Supabase
 const SUPABASE_URL = 'https://kjhjeaiwjilkgocwvbwi.supabase.co';
 const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
