--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -129,6 +129,7 @@ body {
   <div class="navbar">
     <div style="font-weight: bold; color: #0f172a;">ERP ABP</div>
     <div class="nav-buttons">
+        <a href="index.html" class="btn-nav"><i class="fas fa-home"></i> Voltar</a>
         <button class="btn-nav btn-logout-nav" onclick="sairDaConta()">
             <i class="fas fa-sign-out-alt"></i> Sair
         </button>
