--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -164,7 +164,7 @@ async function sairDaConta() {
 
             <a href="clientes.html" class="card">
                 <i class="fas fa-users"></i>
-                <h3>Gestão de Clientes</h3>
+                <h3>Clientes,Fornecedores,Funcionarios ...</h3>
                 <p>Cadastro e gerenciamento completo de clientes.</p>
             </a>
 
