--- a/projeto/erp/index.html
+++ b/projeto/erp/index.html
@@ -162,10 +162,10 @@ async function sairDaConta() {
                 <p>Anote e organize suas ideias na nuvem.</p>
             </a>
 
-            <a href="clientes.html" class="card">
+            <a href="entidades.html" class="card">
                 <i class="fas fa-users"></i>
-                <h3>Clientes,Fornecedores,Funcionarios ...</h3>
-                <p>Cadastro e gerenciamento completo de clientes.</p>
+                <h3>Entidades</h3>
+                <p>Clientes,Fornecedores,colaboradores etc...</p>
             </a>
 
             <div class="card card-logout" onclick="sairDaConta()">
